--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% comment %} Load Thumbnail as per docs {% endcomment %}
+{% load thumbnail %}
+
+
 {% block title %}Homepage{% endblock title%}
 
 {% block body %}
@@ -9,6 +13,11 @@
         
         {{ post.text }}
 
+        {% comment %} Adding thumbnails via sorl-thumbnail {% endcomment %}
+        {% thumbnail post.image "100x100" crop="center" as im %}
+        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+        {% endthumbnail %}        
+        
         <hr>
 
     {% endfor %}
