--- a/templates/detail.html
+++ b/templates/detail.html
@@ -4,6 +4,11 @@
 
 {% block body %}
 
-    This is where details is going to go
+    <h3>Text</h3>
+
+    {{object.text}}
+   
+    <h3>Image</h3>
+    <img src="{{ object.image.url }}" alt="" srcset="">
 
 {% endblock body %}
