--- a/templates/detail.html
+++ b/templates/detail.html
@@ -3,6 +3,8 @@
 {% block title %}Detail View{% endblock title %}
 
 {% block body %}
+    
+    <a href="{% url "feed:index" %}">&larr; Go back</a>
 
     <h3>Text</h3>
 
