--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,16 @@
     </title>
 </head>
 <body>
+
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+        
     {% block body %}{% endblock body%}
+
 </body>
 </html>
