--- a/templates/base.html
+++ b/templates/base.html
@@ -6,18 +6,24 @@
     <title>
         {% block title %}Default Title{% endblock title%}
     </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 </head>
 <body>
+    {% include "includes/navbar.html" %}
 
     {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
+        {% for message in messages %}
+        <div class="bg-{% if message.tags %}{{ message.tags }}{% else %}success{% endif %} text-center text-white py-4">
+            {{message}}
+        </div>
         
-    {% block body %}{% endblock body%}
+        {% endfor %}
+    {% endif %}
+    
+    <div class="container">
+        {% block body %}{% endblock body%}
+    </div>
 
 </body>
 </html>
