--- a/templates/detail.html
+++ b/templates/detail.html
@@ -4,13 +4,14 @@
 
 {% block body %}
     
-    <a href="{% url "feed:index" %}">&larr; Go back</a>
+    {% comment %} <a href="{% url "feed:index" %}">&larr; Go back</a> {% endcomment %}
 
-    <h3>Text</h3>
+    <div class="row">
+        <div class="col-sm-10 offset-sm-1 py-5">
+            {{object.text}}
+            <img src="{{ object.image.url }}" alt="" class="img-fluid rounded">
+        </div>
+    </div>
 
-    {{object.text}}
-   
-    <h3>Image</h3>
-    <img src="{{ object.image.url }}" alt="" srcset="">
 
 {% endblock body %}
